--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,23 +10,16 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <!-- Welcome Activity -->
-        <activity android:name=".WelcomeActivity">
+        <activity android:name=".controller.SkillActivity"/>
+        <activity android:name=".controller.FinishActivity"/> <!-- Welcome Activity -->
+        <activity android:name=".controller.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- League Activity -->
-        <activity android:name=".LeagueActivity"/>
-
-        <!-- Skill Activity -->
-        <activity android:name=".SkillActivity"/>
-
-        <!-- Meta Data-->
+        </activity> <!-- League Activity -->
+        <activity android:name=".controller.LeagueActivity" /> <!-- Meta Data -->
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
